Fix pseudo-element overlaping

--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -106,7 +106,7 @@
             position: absolute;
             background: white;
             z-index: 0;
-            right: -10px;
+            right: -11px;
         }
     }
 
